新增 Windows 任务栏歌词与托盘控制